--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,12 @@ jobs:
 
       # run tests!
       - run: gradle test
+
+      android_config: &android_config
+        working_directory: *workspace
+        docker:
+          - image: circleci/android:api-27-alpha
+        environment:
+          TERM: dumb
+          _JAVA_OPTIONS: "-Xmx2048m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+          GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m"'
